# nlip_web

./: ARCHITECTURE.md  BookSoup_output.txt  CONTRIBUTING.md  CompSoup_output.txt  EBAYSoup_output.txt  ETHAN_DEVELOPMENT_GUIDE.md  GoogSoup_output.txt  IMAGE_CHAT_DEVELOPMENT_GUIDE.md  README.md  TEXT_CHAT_DEVELOPMENT_GUIDE.md  amaz.py  amazon.py  amazon2.py  amazon3.py  bookList2.txt  booklist.txt  books.py  computer.py  costco.py  costco2.py  ebay.py  ebay_new.py  ebay_results.csv  finalAmzSoup.html  google.py  hello.py  instacart.py  pyproject.toml  run_main_module.sh  scripts.py  soup_output.txt  start.sh
client/: package-lock.json  package.json  vite.config.js
client/components/: Products.jsx  Text.jsx
client/components/ui/: MessageBox.jsx  (+2 more)
client/src/: App.jsx
client/utils/: module_test.js  nlip.js
nlip_web/: env.py  genai.py  image_chat.py  nlip_ext.py  run_echo.py  text_chat.py  vite_chat.py  vite_image.py  vite_text.py  webserver.py
static/: PAGE_TYPES_SUMMARY.md  TESTING_GUIDE.md  chat_script.js  common.css  common.js  image_chat.html  image_script.js  index.html  nlip.js  page1_text_chat.html  page1_working.js  page2_structured_chat.html  page2_structured_script.js  page3_text_image_chat.html  page3_text_image_script.js  page4_multimedia_chat.html  page4_multimedia_script.js  script.js  styles.css  styles.reset2.css  text_chat.html
static/save/: index.html  script.js  styles.css
website_modules/: WEB_MODULES.md  amazon_final.py  bestbuy_ca_module.py  dbm_output.txt  dellelce_bookstore_module.py  deluce_bookstore_module.py  homeDepotSelen.py  main_module.py  newegg_ca_module.py  staples_ca_module.py  walmart_ca_module.py
(+8 files in other folders)
